--- a/src/styles.css
+++ b/src/styles.css
@@ -101,12 +101,14 @@ nav {
 .selectRegion-box {
 	width: 150px;
 	font-size: 16px;
+	border-radius: 10px;
 }
 
 .selectSorting-box,
 .selectShiny-box {
 	width: 80px;
 	font-size: 16px;
+	border-radius: 10px;
 }
 
 .pokedex-grid {
@@ -293,101 +295,9 @@ nav {
 }
 
 #type-box {
-	padding: 3px;
-	border-radius: 10px;
-	font-size: 18px;
+	padding: 4px;
 	width: 50px;
 	height: 50px;
-}
-
-.grass {
-	background: #38be4b;
-	border-radius: 12px;
-}
-
-.water {
-	background: #3692dd;
-	border-radius: 12px;
-}
-
-.fire {
-	background: #ff9740;
-	border-radius: 12px;
-}
-
-.poison {
-	background: #b567cd;
-	border-radius: 12px;
-}
-
-.bug {
-	background: #84c300;
-	border-radius: 12px;
-}
-
-.flying {
-	background: #8aaae3;
-	border-radius: 12px;
-}
-
-.normal {
-	background: #919aa3;
-	border-radius: 12px;
-}
-
-.electric {
-	background: #fbd100;
-	border-radius: 12px;
-}
-
-.ground {
-	background: #e87235;
-	border-radius: 12px;
-}
-
-.fairy {
-	background: #fb89eb;
-	border-radius: 12px;
-}
-
-.fighting {
-	background: #df3069;
-	border-radius: 12px;
-}
-
-.ghost {
-	background: #4c6ab2;
-	border-radius: 12px;
-}
-
-.psychic {
-	background: #ff6577;
-	border-radius: 12px;
-}
-
-.rock {
-	background: #c8b686;
-	border-radius: 12px;
-}
-
-.steel {
-	background: #5a8ea3;
-	border-radius: 12px;
-}
-
-.ice {
-	background: #4cd1c0;
-	border-radius: 12px;
-}
-
-.dragon {
-	background: #006fc9;
-	border-radius: 12px;
-}
-
-.dark {
-	background: #5b5466;
-	border-radius: 12px;
 }
 
 .modal-backdrop {
@@ -816,6 +726,7 @@ nav {
 
 	.favorites {
 		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 
 	.favorite-heart-navbar {
